--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "webshop-projekt",
-  "private": true,
+  "private": false,
+  "homepage": "https://mikkelschmidt97.github.io/webshop-projekt",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
